# sg_api.py

./: README.md  api.py  pyproject.toml  test_sg_api.py
.github/workflows/: main.yml  python-publish.yml
docs/: usage.md
src/sg_api_py/: __init__.py  api.py  field.txt
tests/: test_sg_api.py
