[project]
name = "sg-api.py"
version = "0.1.6"
authors = [
  { name="stainlesteel", email="pd4500@protonmail.com"}
]
description = "A python API wrapper for the Squid Game API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/stainlesteel/sg_api.py"
Issues = "https://github.com/stainlesteel/sg_api.py/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
